[package]
name = "tezedge-snapshots"
version = "0.1.0"
authors = ["Adrian Nagy <adrian.nagy@viablesystems.io>"]
edition = "2018"
default-run = "tezedge-snapshots"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2"
shiplift = { git = "https://github.com/tezedge/shiplift.git", branch = "master" }
clap = "2.33"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slog = { version = "2.7", features = ["nested-values", "max_level_trace", "release_max_level_debug"] }
slog-async = "2.6"
slog-term = "2.8"
thiserror = "1"
tokio = { version = "1.12", features = ["full"] }